PersonalPortfolioWebpage/css/master.css
* {
	margin: 0;
	padding: 0;
}

body {
	cursor: url('../img/cursor.cur'), auto;
	font-family: "微软雅黑";
}

a {
	cursor: url('../img/cursor_a.cur'), auto;
	text-decoration: none;
	color: #000000;
}

.top_bar {
	height: 60px;
	width: 100%;
	background: rgba(250, 250, 250, 0.6);
	position: fixed;
}

.head_nav {
	height: 60px;
	width: 1024px;
	margin: 0 auto;
}

.head_nav>a {
	display: block;
	width: 120px;
	height: 60px;
	font-size: 32px;
	font-weight: bold;
	text-align: center;
	line-height: 56px;
	float: left;
	background-color: rgba(249, 249, 249, 0.6);
	transition-duration: 0.4s;
	color: #00BFFF;
}

.head_nav>a:hover {
	background-color: rgba(230, 230, 230, 0.4);
}

.head_nav .nav_bar {
	display: block;
	width: 320px;
	height: 60px;
	font-size: 20px;
	list-style: none;
	float: right;
}

.head_nav .nav_bar li {
	display: inline-block;
	width: 80px;
	height: 60px;
	background: rgba(240, 240, 240, 0.8);
}

.head_nav .nav_bar li a {
	width: 100%;
	height: 100%;
	text-align: center;
	line-height: 56px;
	transition-duration: 0.5s;
}

.head_nav .nav_bar li a:hover {
	color: #FFFFFF;
	background: rgba(128, 128, 128, 0.5);
}

.wrap {
	display: block;
	width: 100%;
	height: 3660px;
}

.wrap .part {
	display: block;
	height: 900px;
	width: 100%;
	background-attachment: fixed;
	background-position: center center;
}

.wrap #home {
	background-image: url(../img/bg1.png);
	padding-top: 60px;
}

.wrap #mascot {
	background-image: url(../img/bg2.png);
}

.wrap #events {
	background-image: url(../img/bg3.png);
}

.wrap #about {
	background-image: url(../img/bg4.png);
}

.wrap .part .container {
	display: block;
	height: 100%;
	width: 1024px;
	margin: 0 auto;
	padding: 100px 0;
}

.wrap #home .intro_message {
	display: block;
	width: 100%;
	height: 100%;
	text-align: center;
}

.wrap #home .intro_message h1 {
	font-size: 160px;
	font-family: "courier new";
	font-weight: 900;
	color: rgba(250, 250, 250, 0.7);
	text-shadow: 0px 0px 20px #FFFFFF;
}

.wrap #home .intro_message h3 {
	font-size: 30px;
	font-family: "微软雅黑";
	font-weight: 700;
	color: #FFE4B5;
	margin-top: 50px;
}

.wrap #home .intro_message ul {
	display: block;
	width: 800px;
	height: 50px;
	list-style: none;
	margin: 100px auto;
}

.wrap #home .intro_message ul li {
	display: inline-block;
	width: 154px;
	height: 50px;
	margin: auto 20px;
}

.wrap #home .intro_message ul li a {
	display: block;
	width: 100%;
	height: 100%;
	text-align: center;
	line-height: 50px;
	font-size: 20px;
	border: 3px solid #000000;
	border-radius: 8px;
	background-color: rgba(220, 220, 220, 0.8);
	transition-duration: 0.4s;
}

.wrap #home .intro_message ul li a:hover {
	color: #FFFFFF;
	background-color: #000000;
	transform: scale(1.1);
}

.wrap #mascot .img_btns {
	display: block;
	width: 150px;
	height: 650px;
	margin: 0 50px;
	float: left;
}

.wrap #mascot .img_btns a {
	display: block;
	width: 150px;
	height: 150px;
}

.wrap #mascot .img_btns a#img33 {
	margin-top: 50px;
}

.wrap #mascot .img_btns a#smalltv {
	margin-top: 150px;
}

.wrap #mascot .img_btns a img {
	width: 150px;
	height: 150px;
}

.wrap #mascot .img_btns a#smalltv img {
	display: block;
	width: 100px;
	height: 100px;
	margin: auto;
}

.wrap #mascot .div_mascots {
	display: block;
	width: 700px;
	height: 650px;
	float: left;
	position: relative;
}

.wrap #mascot .div_mascots>div {
	display: none;
	width: 600px;
	height: 200px;
	background-color: #FFFFFF;
	position: absolute;
	padding: 20px;
	border: 10px solid #66CCFF;
	border-radius: 25px;
}

.wrap #mascot .div_mascots>div::before,
.wrap #mascot .div_mascots>div::after {
	content: "";
	position: absolute;
	width: 0;
	height: 0;
	border-width: 40px;
	border-style: solid;
	border-color: transparent #66CCFF transparent transparent;
	left: -80px;
	top: 20px;
}

.wrap #mascot .div_mascots>div::after {
	left: -66px;
	border-color: transparent #FFFFFF transparent transparent;
}

.wrap #mascot .div_mascots .div33 {
	top: 140px;
}

.wrap #mascot .div_mascots .div33::before,
.wrap #mascot .div_mascots .div33::after {
	top: 50px;
}

.wrap #mascot .div_mascots .divTv {
	top: 400px;
}

.wrap #mascot .div_mascots .divTv::before,
.wrap #mascot .div_mascots .divTv::after {
	top: 120px;
}

.wrap #mascot .div_mascots>div h4 {
	font-size: 26px;
	line-height: 40px;
}

.wrap #mascot .div_mascots>div p {
	font-size: 14px;
}

.wrap #events .event_lists {
	width: 810px;
	height: 340px;
	margin: 180px auto;
	display: block;
}

.wrap #events .event_lists a {
	display: block;
	width: 250px;
	height: 150px;
	margin: 10px;
	float: left;
	position: relative;
}

.wrap #events .event_lists a img {
	width: 250px;
	height: 150px;
}

.wrap #events .event_lists a div {
	display: none;
	width: 250px;
	height: 150px;
	position: absolute;
	top: 0;
	left: 0;
	background-color: rgba(0, 0, 0, 0.7);
	color: #FFBF77;
}

.wrap #events .event_lists a:hover div {
	display: block;
}

.wrap #events .event_lists a div h3 {
	width: 210px;
	height: auto;
	margin: 20px auto 10px auto;
	font-size: 18px;
	text-align: center;
}

.wrap #events .event_lists a div p {
	width: 180px;
	height: auto;
	margin: 0 auto 0 auto;
	font-size: 14px;
}

.wrap #about .container .about_us {
	display: block;
	margin: 0 auto;
	padding: 20px 0;
	width: 630px;
	height: 660px;
	background: rgba(255, 255, 255, 0.7);
	overflow: hidden;
}

.wrap #about .container .about_us .box {
	display: block;
	padding: 20px;
	width: 610px;
	height: 640px;
	overflow-y: scroll;
}

.wrap #about .container .about_us p {
	font-size: 14px;
}

.footer {
	display: block;
	width: 100%;
	height: 250px;
	background-color: #CCCCCC;
	margin: 0;
}

.footer .content {
	display: block;
	width: 1000px;
	margin: 0 auto;
	padding: 30px 0;
}

.footer .content ul {
	list-style: none;
	display: block;
	width: 500px;
	height: 130px;
}

.footer .content ul li {
	display: inline-block;
	width: 100px;
	margin: 30px 12px;
}

.footer .content ul li a {
	color: #44AADD;
}

.footer .content p {
	display: block;
	width: 500px;
	height: 50px;
	font-size: 14px;
}

.footer .contact_us {
	width: 400px;
	height: auto;
	float: right;
	margin-top: -115px;
}

.footer .contact_us a {
	display: inline-block;
	width: 100px;
	height: 100px;
	position: relative;
}

.footer .contact_us a .pic {
	width: 56px;
	height: 56px;
	margin: auto;
}

.footer .contact_us a img {
	display: none;
	width: 100px;
	height: 100px;
	padding: 10px;
	background-color: #FFFFFF;
	transition-duration: 0.2s;
	border: 1px solid #AAAAAAA;
	position: absolute;
	top: -125px;
	left: -10px;
}

.footer .contact_us a:hover img {
	display: block;
}

.footer .contact_us a p {
	display: block;
	width: 100px;
	height: 20px;
	text-align: center;
	margin-top: 10px;
}

.footer .contact_us a:hover p {
	color: #44AADD;
}

.footer .contact_us a.app .pic {
	background: url(../img/contact.png) no-repeat 0 -128px;
}

.footer .contact_us a.app:hover .pic {
	background-position: -66px -128px;
}

.footer .contact_us a.sina .pic {
	background: url(../img/contact.png) no-repeat 0 -256px;
}

.footer .contact_us a.sina:hover .pic {
	background-position: -66px -256px;
}

.footer .contact_us a.weixin .pic {
	background: url(../img/contact.png) no-repeat 0 0;
}

.footer .contact_us a.weixin:hover .pic {
	background-position: -66px 0;
}

